# ev-analysis

./: .gitignore  README.md  README_old.md  about_this.md  pyproject.toml
.obsidian/: workspace.json
.streamlit/: config.toml
app/: README.md  main.py  main_old.py
app/ev_sales_by_state_analysis/: main.py
app/overview/: main.py
app/research/: main.py
app/top_bottom_2w_makers_fy2023_2024/: __init__.py  analysis.py
data/processed/: ev_estimated_maker_state_sales_20250806.csv  ev_maker_monthly_share_20250806.csv  ev_manufacturer_performance_20250809.csv  ev_manufacturer_regional_20250809.csv  ev_manufacturer_temporal_20250809.csv  ev_sales_by_makers_cleaned_20250806.csv  ev_sales_by_state_enhanced_20250806.csv  ev_sales_enhanced.csv  processed_ev_sales_by_state.csv
data/visuals/: ev_total_cagr_comparison_fiscal_year.csv  top10_ev_cagr.csv  top10_ev_cagr_fiscal_year.csv  top10_non_ev_cagr.csv  top10_total_vehicles_cagr.csv
docs/: citations.md
docs/analysis_summary/: comprehensive_market_analysis.md  ev_sales_seasonality_guide.md
docs/ev-sales-by-month-analysis/: feature_engineering_documentation.md
docs/presentations/: ev_market_analysis_presentation_script.md
ev_sales_by_state_analysis/: main.py
logs/: ev_sales_by_makers_logger.ods
notebooks/: EDA_analysis.ipynb  cagr_top5_4w_ev_2022_2024_analysis.ipynb
notebooks/ev_sales_by_markers_analysis/: 01_data_cleaning.ipynb  02_feature_engineering.ipynb  03_note_and_document.ipynb  04_eda_analysis.ipynb
notebooks/ev_sales_by_state_analysis/: 01_data_cleaning.ipynb  (+1 more)
research/: main.py
(+26 files in other folders)
