[project]
name = "ev-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "decompyle3>=3.9.2",
    "fiona>=1.10.1",
    "geopandas>=1.1.1",
    "ipython>=9.4.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.5",
    "nbformat>=5.10.4",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "streamlit>=1.48.0",
    "uncompyle6>=3.9.2",
]
